--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@ body {
     padding: 0px;
     margin: 0px;
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+
 }
 
   
@@ -112,7 +115,9 @@ body {
 	height: 750px;
 	width: 100%;
 	overflow: hidden;
-	position: relative;
+    position: relative;
+    margin-bottom: 20px;
+    
 }
 
 
@@ -131,7 +136,7 @@ body {
 	align-items: center;
 	color: #fafafa;
 	text-align: center;
-	padding-top: 20px;
+
 }
 
 .title-text-about {
@@ -364,7 +369,8 @@ footer {
 	margin-bottom: 35px;
 	color: #fafafa;
 	background-color: #c4881be3;
-	width: 150px;
+    width: 150px;
+    height: 40px;
 }
 
 .close {
@@ -1027,7 +1033,8 @@ h4 {
 		height: 680px;
 		width: 100%;
 		overflow: hidden;
-		position: relative;
+        position: relative;
+        margin-bottom: 10px;
 	}
 	.about-container {
 		background-color: rgba(195, 136, 27, 0.5);
@@ -1213,6 +1220,10 @@ h4 {
         justify-content: center;
         margin-top: 50px;
     }
+
+    .btn-class-shaman {
+        margin-top: 30px;
+    }
 	/*---------------------------------------------------------- Events Page -----------------------------------------*/
 	.video-position video {
 		width: 70%;
@@ -1305,7 +1316,10 @@ h4 {
         justify-content: center;
         margin-top: 50px;
     }
-       
+    
+    .btn-class-shaman {
+        margin-top: 30px;
+    }
     /* ------------------------------------- Events Page --------------------------------------*/
 	.video-position video {
 		width: 60%;
